syntax = "proto3";

package auth;
//import "google/protobuf/timestamp.proto";

option go_package = "auth;auth";

message UserId {
  string userId = 1;
}

message UserLogin {
  string login = 1;
  string password = 2;
}

message Empty {
}

message User {
  string ID = 1;
  string UserType = 2;
  string Name = 3;
  string Surname = 4;
  string Email = 5;
  string Phone = 6;
  string SocialNetwork = 7;
}

service Auth {
  rpc Login(UserLogin) returns (User) {}
  //  rpc Check(SessionId) returns (UserId) {}
  rpc Logout(UserId) returns (Empty) {}
}
