syntax = "proto3";

package api;

option go_package = "api;api";

message Sphere {

}

message vac{
  string Id = 1;
  string Title = 2;
  string Gender = 3;
  uint32 SalaryMin = 4;
  uint32 SalaryMax = 5;
  string Description = 6;
  string Requirements = 7;
  string Duties = 8;
  string Skills = 9;
  string Employment = 10;
  uint32 ExperienceMonth = 11;
  string Location = 12;
  string AreaSearch = 13;
  string CareerLevel = 14;
  string EducationLevel = 15;
  string EmpEmail = 16;
  string EmpPhone = 17;
  string Sphere = 18;
}

message vacId {
  string Id = 1;
}

message empty {

}

service Vacancy {
  rpc CreateVacancy(vac) returns (vac) {};
  //rpc UpdateVacancy(vacReq) returns (*models.Vacancy, error)
  rpc  GetVacancy(vacId) returns (vac) {};
  /*rpc  GetVacancyList(uint, uint, uuid.UUID, int) returns ([]models.Vacancy, error)
  rpc  SearchVacancies(models.VacancySearchParams) returns ([]models.Vacancy, error)
  rpc  AddRecommendation(uuid.UUID, int) returns error
  rpc  GetRecommendation(uuid.UUID, int, int) returns ([]models.Vacancy, error)*/
}
